# sosq

./: .gitignore  README.md  pyproject.toml  sample.py  tea.yaml
src/sosq/: __init__.py
tests/: __init__.py  test_getResults.py
