[project]
name = "sosq"
version = "1.0.5"
authors = [
  { name="bakircius", email="burakbakirci@gmail.com" },
]
description = "Building Dataframe from Stack Overflow API with a search query and Saving data to csv file"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "typing"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Framework :: IDLE",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
[project.urls]
Source = "https://github.com/bakircius/sosq"
Issues = "https://github.com/bakircius/sosq/issues"
Repository = "https://github.com/bakircius/sosq.git"
[tool.pytest.ini_options]
pythonpath = "src"
